tdf#119853: Set window state only, don't actually show the window

showMaximized, showNormal etc. makes the windows visible, but it is
not always desirable (e.g. documents opened with 'hidden' flag on)

Change-Id: I15364c816c35865dbc2d74f1d1a46817b1277f43
Reviewed-on: https://gerrit.libreoffice.org/67679
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 9191b59ac13d59a50f88e74604f02eb97e969e89)