vcl/inc/qt5/Qt5Frame.hxx
@@ -101,6 +101,7 @@ class VCLPLUG_QT5_PUBLIC Qt5Frame : public QObject, public SalFrame
     QScreen* screen() const;
     bool isMinimized() const;
     bool isMaximized() const;
+    void SetWindowStateImpl(Qt::WindowStates eState);
 
     void TriggerPaintEvent();
     void TriggerPaintEvent(QRect aRect);
